--- a/assets/Css/base.css
+++ b/assets/Css/base.css
@@ -1,4 +1,5 @@
 :root {
+    --primary-color:#ee4d3e;
    --white-color: #fff;
    --black-color:#000;
    --text-color:#333;
@@ -30,4 +31,28 @@ width: 100%;
     }to{
 opacity: 1;
     }
+}
+/* modal */
+.modal{
+    position: fixed;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+
+}
+.modal__overlay{
+    position: absolute;
+    height: 100%;
+   width: 100%;
+    background-color: rgba(0, 0, 0, 0.4)
+}
+.modal__content{
+    margin: auto;
+    position: relative;
+    background-color: var(--white-color);
+
+    z-index: 1;
+    border-radius: 5px;
 }
