--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -74,6 +74,7 @@ animation: fadeIn ease-in 0.3s;
 
 }
 
+
 .header__qr::before{
   position: absolute;
   display: block;
@@ -108,3 +109,125 @@ height: 16px;
 .navbar__items--show-qr:hover .header__qr{
     display: block;
 }
+.header__notify{
+  position: absolute;
+  top: 100%;
+  right: 0;
+ background-color: var(--white-color);
+  width: 404px;
+  border:1px solid #d3d3d3;
+  margin-top: 12px;
+  cursor: default;
+display:none  ;
+animation: showNoti  ease-in 0.2s;
+transform-origin:calc(100%-20px) top ;
+will-change: opacity,  transform;
+}
+@keyframes showNoti{
+from {
+  opacity: 0;
+  transform: scale(0);
+}
+to{
+  opacity: 1;
+  transform: scale(1);
+}
+}
+.header__notify-header{
+  height: 40px;
+  color: var(--white-color);
+}
+/* thanh ngang */
+.header__notify:after{
+  content: "";
+display: block;
+position: absolute;
+left: 0;    
+right: 0;
+background-color: transparent;
+height: 20px;
+transform: translateY(-100%);
+}
+/* arrow bottom */
+.header__notify:before{
+  content: "";
+display: block;
+position: absolute;
+border:15px solid;
+border-color: transparent transparent var(--white-color) transparent;
+right: -11px;
+top: 3px;
+transform: translate(-100%,-100%);
+
+}
+.header__notify-header h3{
+  color: #999;
+  margin:  0 0 0 12px;
+  font-size: 1.4rem;
+  line-height: 40px;
+  font-weight: 400;
+  user-select: none;
+}
+.navbar__items--show-notify:hover .header__notify{
+  display: block; 
+  
+}
+.notify__list{
+  padding-left: 0 ;
+ 
+}
+.notify__item{
+list-style-type: none;
+
+}
+.notify__item-link{
+  display: flex;
+  padding: 12px;
+  text-decoration: none;
+  
+}
+.notify__item:hover{
+  background-color: #f7f7f7;
+
+}
+.notify__item--viewed{
+  background-color:rgba(238, 75, 43, 0.08);
+}
+
+
+.notify__img{
+  width: 48px;
+  object-fit: contain;
+}
+.notify__text{
+  margin-left: 12px;
+}
+.notify__info{
+  display: block;
+  font-size: 1.4rem;
+  color: var(--text-color);
+  font-weight: 400; 
+}
+.notify__description{
+  display: block;
+  font-size: 1.2rem;
+  color: #756f6e;
+  line-height: 1.6rem;
+  margin-top: 0.4rem;
+
+}
+.header__notify-footer{
+  text-align: center;
+  background-color: hotpink;
+}
+.notify__footer-btn{
+  background-color: green;
+  text-decoration: none;
+  color: var(--white-color  );
+ padding: 8px 0;
+ display: inline-block;
+ width: 100%;
+
+}
+
+
