--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -229,5 +229,117 @@ list-style-type: none;
  width: 100%;
 
 }
+/*  authen form*/
+.auth-form{
+  width: 500px;
+  background-color: var(--white-color); 
+  border-radius: 5px;
+  overflow: hidden;
+}
+.auth-form__container{
+  padding: 0 32px;
+}
+.auth-form__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 12px;
+  margin-top: 10px;
+}
+.auth-form__heading{
+  font-size: 2.2rem;
+  font-weight: 400;
+  color: var(--text-color);
+}
+.switch-btn{
+  font-size: 1.6rem;
+  font-weight: 400;
+  color:var(--primary-color );
+  cursor: pointer;
+}
+.auth-form__input{
+  margin-top: 16px;
+  width: 100%;
+  height: 40px;
+  font-size: 1.4rem;
+  padding: 0 12px;
+  border:1px solid var(--border-color);
+  border-radius: 2px;
+  outline:none
 
+}
+.auth-form__input:focus{
+  border-color:#777;
+}
+.auth-form__policy-text{
+  font-size: 1.2rem;
+line-height: 1.8rem;
+text-align: center;
+padding: 0 12px;
+}
+.auth-form__text-link{
+    text-decoration: none;
+    color:var(--primary-color)
+}
+.auth-form__aside{
+  margin-top: 18px;
+}
+.auth-form__controls{
+  margin-top: 80px;
+  display: flex;
+  justify-content: flex-end;
+  
+}
+.form-control__back-btn{
+  margin-right: 8px;
+}
+.auth-form__social{
+background-color: #e2e2e2;
+  padding: 16px 36px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 24px;
+}
+.auth-form__social-icon{
+    font-size: 1.8rem;
+}
+.auth-form__social--facebook .auth-form__social-icon{
+  color: var(--white-color);
+}
+.auth-form__social--facebook{
+  background-color: #3a5a98;
+  color: var(--white-color);
+}
+.auth-form__social-title{
+  margin: 0 36px;
+}
+.auth-form__social--google{
+  background-color: var(--white-color);
+  color: #666;
+}
 
+  .auth-form__help{
+     
+    display: flex;
+    justify-content: flex-end;
+  }
+  .auth-form__help-link{
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: #939393;
+
+  }
+  .auth-form__help-separate{
+    display: block;
+    border-left: 1px solid #eaeaea;
+    height: 18px;
+    margin: 0 16px;
+  }
+  .auth-form__help-forgot{
+    color: var(--primary-color);
+  }
+  /* header search */
+  .header-with-search{
+
+  }
+  
