--- a/assets/Css/base.css
+++ b/assets/Css/base.css
@@ -1,39 +1,81 @@
 :root {
-  --primary-color: #ee4d3e;
   --white-color: #fff;
   --black-color: #000;
   --text-color: #333;
+  --primary-color:#ee4d2d;
   --border-color: #dbdbdb;
+
 }
-* {
-  box-sizing: inherit;
-}
+*{box-sizing: inherit;}
+
 html {
   font-size: 62.5%;
   line-height: 1.6rem;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
 }
+/* Responsive */
 .grid {
   width: 1200px;
   max-width: 100%;
   margin: 0 auto;
 }
+
 .grid__full-width {
   width: 100%;
 }
 .grid__row {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -5px;
+  margin-right: -5px;
 }
+/* Test */
+.grid__column-2-12 {
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 16.6667%;
+}
+.grid__column-2-10 {
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 20%;
+}
+.grid__column-10-12 {
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 83.3333%;
+}
+/* Animation */
 @keyframes fadeIn {
   from {
-    opacity: 0;
+      opacity: 0;
   }
   to {
-    opacity: 1;
+      opacity: 1;
   }
 }
+
+@keyframes growth {
+  from {
+      transform: scale (var(--growth-from));
+  }
+  to {
+      transform: scale(var(--growth-to));
+  }
+}
+/* Modal */
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  animation: fadeIn linear 0.2s;
+}
+/* modal pas
+*/
 /* modal */
 .modal {
   position: fixed;
@@ -41,7 +83,14 @@ html {
   left: 0;
   right: 0;
   bottom: 0;
+  display: none;
+}
+
+.modal.open{
   display: flex;
+}
+.js-hiddendangky.hddangky{
+  display: none;
 }
 .modal__overlay {
   position: absolute;
@@ -52,8 +101,16 @@ html {
 .modal__content {
   margin: auto;
   position: relative;
-
   z-index: 1;
+      --growth-from: 0.7;
+      --growth-to: 1;
+      margin: auto;
+      background-color: var(--white-color);
+      z-index: 1;
+      position: relative;
+      border-radius: 4px;
+      animation: growth linear 0.1s ;
+  
 }
 /* button common */
 .btn {
@@ -62,10 +119,11 @@ html {
   height: 40px;
   min-width: 100px;
   text-decoration: none;
-  color: var(--white-color);
+  color: var(--text-color);
   font-size: 1.4rem;
   padding: 0;
   border-radius: 2px;
+  background-color: var(--white-color);
 }
 .btn.btn-normal {
   width: 112px;
@@ -76,15 +134,83 @@ html {
   justify-content: center;
   align-items: center;
 }
+.btn.btn--primary {
+  color: var(--white-color);
+  background-color: var(--primary-color);
+}
+.btn--primary:hover{
+  opacity: 0.9;
+}
+.btn.btn--size-s{
+  min-height: 30px;
+}
 .btn.btn-size--big {
   width: 100%;
   background-color: var(--primary-color);
   opacity: 0.7;
-  cursor: default;
+  cursor: pointer;
   text-transform: uppercase;
+  color: var(--white-color);
+
 }
 .btn.btn--disable {
   color: #949494;
   background-color: #c3c3c3;
   cursor: default;
+}
+
+
+/* Selection input */
+.select-input {
+  min-width: 200px;
+  height: 34px;
+  padding: 0 12px;
+  border-radius: 2px;
+  background-color: var(--white-color);
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+.select-input__label {
+  font-size: 1.4rem;
+  
+}
+.select-input__icon {
+  font-size: 1.2rem;
+  color: #4a4a4a;
+  margin: 0 8px;
+}
+.home-filter__page-btn.home-filter__page-btn--disabled{
+  color: #ccc;
+  cursor: default;
+  background-color: #f9f9f9;
+}
+/* pagination */
+.pagination{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+}
+.pagination-item{
+  margin: 0 15px;
+}
+.pagination-item__link{
+  --height: 30px;
+  display: block;
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: #939393;
+  min-width: 40px;
+  height: var(--height);
+  line-height: var(--height);
+  text-align: center;
+  border-radius: 2px;
+}
+.pagination-item__icon{
+
+}
+.pagination-item--active .pagination-item__link{
+  color: var(--white-color);
+  background-color: var(--primary-color);
 }
